--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@vueuse/components": "^14.0.0",
     "@vueuse/core": "^14.0.0",
+    "aos": "^2.3.4",
     "axios": "^1.13.1",
     "imagesloaded": "^5.0.0",
     "masonry-layout": "^4.2.2",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@iconify/json": "^2.2.402",
     "@tsconfig/node22": "^22.0.2",
+    "@types/aos": "^3.0.7",
     "@types/imagesloaded": "^4.1.7",
     "@types/masonry-layout": "^4.2.8",
     "@types/node": "^22.18.11",
